--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "sweetalert2": "^11.15.10",
+    "swiper": "^11.2.2",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
