--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^7.1.5",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.2",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "tailwindcss-animated": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
